2003-09-15  Bernhard Held <bernhard@bernhardheld.de>

	Feature req. 799831: added code to allow nesting of critical functions
	* src/mcs51/gen.c (genFunction, genEndFunction)
	* src/ds390/gen.c (genFunction, genEndFunction)

2003-09-14  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.c (sclsFromPtr),
	* src/SDCCsymt.h,
	* src/SDCCast.c (decorateType): fixed bug #462971. Also, better
	support for standard C idiom of memory mapped variables; for
	example, *((xdata int*)0x1234) = 1 is now internally equivalent
	to xdata int at 0x1234 tempvar = 1.
	* sim/ucsim/z80.src/inst_xd.cc: fixed bug #805483 with patch
	provided by Akiya ISHIDA

2003-09-13  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (cheapestVal): reenabled to reduce int to char
	* src/SDCCval.c (constVal): added reduction from int to char
	* src/SDCCval.c (valMult, valDiv): fixed sign handling
	* src/SDCCval.c (valShift): fixed after change of cheapestVal()
	* src/SDCCval.c (valCompare): fixed EQ_OP and NE_OP; they have
	to ignore the sign
	* support/regression/tests/shifts.c: fixed

2003-09-13  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c (genXor): Fixed bug #805445

2003-09-12  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed bug #621531 (const & volatile confusion in the type chain).
	DCL_PTR_CONST, DCL_PTR_VOLATILE, & IS_PTR_CONST now exclusively
	refer to the const or volatile state of the pointer itself.

	* src/SDCCast.c
	* src/SDCCglue.c
	* src/SDCCicode.c
	* src/SDCCsymt.c
	* src/SDCCval.c
	* src/SDCC.y
	* src/SDCCsymt.h
	* src/pic/gen.c
	* src/pic/ralloc.c
	* src/pic16/gen.c
	* src/pic16/ralloc.c
	* support/regression/tests/const.c

2003-09-10  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	When checking for duplicated modules, use absolute paths
	instead of relative paths.  Files changed:

	* as/mcs51/lklib.c
	* link/z80/lklib.c

2003-09-09  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeLogic): fixed bug #797572
